<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 CarbonROM

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_category"
    android:key="system_fragment"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
        android:key="smart_pixels"
        android:title="@string/smart_pixels_title"
        android:summary="@string/smart_pixels_summary"
        android:fragment="com.bananadroid.bananasplit.fragments.system.SmartPixels" />

    <Preference
        android:key="aggressive_battery"
        android:title="@string/aggressive_battery_title"
        android:summary="@string/aggressive_battery_summary"
        android:fragment="com.bananadroid.bananasplit.fragments.system.AggressiveBattery" />

    <Preference
        android:key="global_actions"
        android:title="@string/global_actions_title"
        android:summary="@string/global_actions_summary"
        android:fragment="com.bananadroid.bananasplit.fragments.system.GlobalActionsSettings"
        settings:allowDividerAbove="true" />

    <SwitchPreference
        android:key="advanced_reboot"
        android:title="@string/global_actions_advanced_reboot_title"
        android:summary="@string/global_actions_advanced_reboot_summary"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="charging_animation"
        android:title="@string/charging_animation_title"
        android:summary="@string/charging_animation_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="aspect_ratio_category"
        android:title="@string/aspect_ratio_category_title">

        <SwitchPreference
            android:key="aspect_ratio_apps_enabled"
            android:title="@string/aspect_ratio_apps_enabled_title"
            android:summary="@string/aspect_ratio_apps_enabled_summary"
            android:defaultValue="false" />

        <com.bananadroid.bananasplit.preference.AppMultiSelectListPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:summary="@string/aspect_ratio_apps_list_summary"
            android:title="@string/aspect_ratio_apps_list_title"
            android:key="aspect_ratio_apps_list"
            android:persistent="false" />

        <com.bananadroid.bananasplit.preference.ScrollAppsViewPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:key="aspect_ratio_apps_list_scroller"
            android:persistent="false"
            android:selectable="false" />

        <Preference
            android:dependency="aspect_ratio_apps_enabled"
            android:persistent="false"
            android:summary="@string/aspect_ratio_apps_info" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dashboard_category"
        android:title="@string/dashboard_category_title">

    <SwitchPreference
        android:key="enable_conditions"
        android:title="@string/dashboard_conditions_title"
        android:summaryOn="@string/summary_dashboard_conditions_enabled"
        android:summaryOff="@string/summary_dashboard_conditions_disabled"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="enable_suggestions"
        android:title="@string/dashboard_suggestions_title"
        android:summaryOn="@string/summary_dashboard_suggestions_enabled"
        android:summaryOff="@string/summary_dashboard_suggestions_disabled"
        android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceScreen
        android:icon="@drawable/ic_hafr"
        android:title="@string/hide_apps_from_recents_title"
        android:summary="@string/hide_apps_from_recents_summary" >
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.settings"
            android:targetClass="com.bananadroid.bananasplit.fragments.system.hideappfromrecents.HAFRAppListActivity" />
    </PreferenceScreen>

</PreferenceScreen>
